--- a/0x02-tailwind-css/package.json
+++ b/0x02-tailwind-css/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "0x02-tailwind-css",
+  "name": "alx-intermediate-frontend",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/orolamilekan/alx-intermediate-frontend#readme",
+  "bugs": {
+    "url": "https://github.com/orolamilekan/alx-intermediate-frontend/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/orolamilekan/alx-intermediate-frontend.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.13",
     "tailwindcss": "^4.1.13"
   }
 }
